fix: fix sizeslist overflow

--- a/final-task/src/styles/productCard.scss
+++ b/final-task/src/styles/productCard.scss
@@ -156,7 +156,7 @@
       margin-bottom: 10px;
       overflow-x: auto;
       gap: 10px;
-      justify-content: center;
+      justify-content: flex-start;
       width: 100%;
       padding: 10px;
       position: relative;
